@@ -36,6 +36,10 @@
           <encoding>UTF-8</encoding>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
+          <compilerArgs>
+            <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>3.10.1</version>
